# Lagrangian-Transport-Scenarios

./: .env  README.md  environment_LTS.yml  pyproject.toml  run_Analysis.py
Analysis/: FileNaming.py  TimeSlicing.py  masterProcessing.py  particleClasses.py  setupFunc.py  transportFunc.py  ubelixAnalysisJobSubmission.sh
Model/: ModelMasterFile.py  ParticleBeaching.py  ParticleSetup.py  beachFunc.py  generalBeachingScenarios.py  jobsubmissionFile_0_.sh  jobsubmissionFile_1_.sh  particleClasses.py  setupFunc.py  transportFunc.py  ubelixBeachingJobSubmission.sh
Tests/: offshorewind.py  test.nc
old_model_setup/: DataSetup.py  ParticleSetup.py  ParticleTransport.py  README.md
src/: README.md  main.py  settings.py
src/Analysis/: CMEMS_mediterranean_mean_MLD.py  FragmentationKaandorpPartial_Statistics.py  FragmentationKaandorpPartial_fielddata.py  FragmentationKaandorpPartial_mass_loss.py  FragmentationKaandorp_boxmodel.py  README.md  SizeTransport_Statistics.py  __init__.py  parcels_to_basicstatistics.py  parcels_to_bayesian.py  parcels_to_concentration.py  parcels_to_concentration_monthly.py  parcels_to_lonlat_average.py  parcels_to_max_distance.py  parcels_to_maxminmean.py  parcels_to_particle_number.py  parcels_to_separation_distance.py  parcels_to_sizespectrum.py  parcels_to_spatial_vertical_profiles.py  parcels_to_timeseries.py  parcels_to_timeslices.py  parcels_to_vertical_concentration.py
src/advection_scenarios/: README.md  advection_files.py  create_MLD_files.py  create_boundary_current.py  create_distance_to_shore.py  create_grid_spacing.py  (+3 more)
(+84 files in other folders)
